apps/prometheus-system/prometheus-operator/resources/prometheus-ingressroute.yaml
apiVersion: traefik.io/v1alpha1
kind: IngressRoute
metadata:
  name: prometheus
  namespace: prometheus-system
spec:
  routes:
    - match: Host(`prometheus.${DOMAIN}`)
      priority: 10
      middlewares:
        - name: authentik
          namespace: authentik
      services:
        - name: prometheus-operated
          port: 9090
